--- a/Town SQ.xcodeproj/xcshareddata/xcschemes/Town SQ.xcscheme
+++ b/Town SQ.xcodeproj/xcshareddata/xcschemes/Town SQ.xcscheme
@@ -50,6 +50,23 @@
             ReferencedContainer = "container:Town SQ.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "AWS_REGION"
+            value = "us-east-1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "AWS_ACCESS_KEY_ID"
+            value = "AKIA3IRYCDWJ3J6NADQM"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "AWS_SECRET_ACCESS_KEY"
+            value = "9UxolhQiFjbfVjPfFNpm3Kc5E5693gurxGNXbfgp"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
